--- a/Head First Lounge/lounge.css
+++ b/Head First Lounge/lounge.css
@@ -1,27 +1,17 @@
 body {
-	font-family: sans-serif;
+	font-size: small;
+	font-family: Verdana,Helvetica,Arial,sans-serif;
+	line-height: 1.6em;
 }
 
 h1,h2 {
-	color: gray;
+	color: #007e7e;
 }
 
 h1 {
-	border-bottom: 1px solid black;
+	font-size: 150%;
 }
 
-p {
-	color: maroon;
-}
-
-p.greentea{
-	color: green;
-}
-
-p.raspberry{
-	color:blue; 
-}
-
-p.blueberry{
-	color:purple;
+h2 {
+	font-size: 130%;
 }
