--- a/Head First Lounge/lounge.css
+++ b/Head First Lounge/lounge.css
@@ -1,7 +1,5 @@
 body {
-	font-size: small;
-	font-family: Verdana,Helvetica,Arial,sans-serif;
-	line-height: 1.6em;
+	font: small/1.6em Verdana,Helvetica,Arial,sans-serif;
 }
 
 h1,h2 {
@@ -17,13 +15,9 @@ h2 {
 }
 
 #guarantee {
-	line-height: 1.9em;
-	font-style: italic;
-	font-family: Georgia,"Times New Roman",Times, serif;
+	font: italic small/1.9em Georgia,"Times New Roman",Times, serif;
 	color: #444444;
-	border-color: white;
-	border-width: 1px;
-	border-style: dashed;
+	border: white 1px dashed;
 	background-color: #a7cece;
 	padding: 25px;
 	padding-left: 80px;
@@ -50,4 +44,29 @@ h2 {
 	body {
 		font-family: Times, "Times New Roman", serif;
 	}
+}
+
+#elixirs {
+	border: thin solid #007e7e;
+	width: 200px;
+	padding: 0px 20px 20px 20px;
+	margin-left: 20px;
+	text-align: center;
+	background: white url(images/cocktail.gif) repeat-x;
+	line-height: 1;
+}
+
+#elixirs h2 {
+	color: black;
+}
+
+#elixirs h3 {
+	color: #d12c47;
+}
+
+#footer {
+	font-size: 50%;
+	text-align: center;
+	line-height: normal;
+	margin-top: 30px;
 }
