--- a/Head First Lounge/lounge.css
+++ b/Head First Lounge/lounge.css
@@ -70,3 +70,24 @@ h2 {
 	line-height: normal;
 	margin-top: 30px;
 }
+
+.cd {
+	font-style: italic;
+}
+
+.artist {
+	font-weight: bold;
+}
+
+#elixirs a:link {
+	color: #007e7e;
+}
+
+#elixirs a:visited {
+	color: #333333;
+}
+
+#elixirs a:hover {
+	background: #f88396;
+	color: #0d5353;
+}
