--- a/Head First Lounge/lounge.css
+++ b/Head First Lounge/lounge.css
@@ -54,6 +54,7 @@ h2 {
 	text-align: center;
 	background: white url(images/cocktail.gif) repeat-x;
 	line-height: 1;
+	float: right;
 }
 
 #elixirs h2 {
