--- a/Starbuzz Coffee/starbuzz.css
+++ b/Starbuzz Coffee/starbuzz.css
@@ -15,7 +15,6 @@ body {
 	background: #efe5d0 url(images/background.gif) top left;
 	font-size: 105%;
 	padding: 15px;
-	margin: 0px 10px 10px 10px;
 	margin: 0px 330px 10px 10px;
 }
 
@@ -24,8 +23,10 @@ body {
 	font-size: 105%;
 	padding: 15px;
 	margin: 0px 10px 10px 10px;
+	position: absolute;
+	top: 128px;
+	right: 0px;
 	width: 280px;
-	float: right;
 }
 
 #footer {
@@ -35,7 +36,6 @@ body {
 	padding: 15px;
 	margin: 10px;
 	font-size: 90%;
-	clear: right;
 }
 
 h1 {
@@ -62,11 +62,3 @@ a:visited {
 	border-bottom: thin dotted #675c47;
 }
 
-#allcontent {
-	width: 800px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	background-color: #675c47;
-	margin-left: auto;
-	margin-right: auto;
-}
