--- a/Starbuzz Coffee/starbuzz.css
+++ b/Starbuzz Coffee/starbuzz.css
@@ -11,6 +11,14 @@ body {
 	height: 108px;
 }
 
+#drinks {
+	display: table-cell;
+	background-color: #efe5d0;
+	width: 20%;
+	padding: 15px;
+	vertical-align: top;
+}
+
 #main {
 	display: table-cell;
 	background: #efe5d0 url(images/background.gif) top left;
@@ -68,4 +76,26 @@ div#tableContainer {
 div#tableRow {
 	display: table-row;
 }
+
+#headerSlogan {
+	float: right;
+}
+
+#award {
+	position: absolute;
+	top: 30px;
+	left: 365px;
+}
+
+#coupon {
+	position: fixed;
+	top: 350px;
+	left: -90px;
+}
+
+#coupon a,img {
+	border: none;
+}
+
+
 
