--- a/Starbuzz Coffee/starbuzz.css
+++ b/Starbuzz Coffee/starbuzz.css
@@ -5,13 +5,13 @@ body {
 	margin: 0px;
 }
 
-#header {
+header.top {
 	background-color: #675c47;
 	margin: 10px 10px 0px 10px;
 	height: 108px;
 }
 
-#drinks {
+section#drinks {
 	display: table-cell;
 	background-color: #efe5d0;
 	width: 20%;
@@ -19,7 +19,7 @@ body {
 	vertical-align: top;
 }
 
-#main {
+section#main, section#blog {
 	display: table-cell;
 	background: #efe5d0 url(images/background.gif) top left;
 	font-size: 105%;
@@ -27,15 +27,15 @@ body {
 	vertical-align: top;
 }
 
-#sidebar {
+aside {
 	display: table-cell;
 	background: #efe5d0 url(images/background.gif) bottom right;
 	font-size: 105%;
 	padding: 15px;
-	margin: 0px 10px 10px 10px;
+	vertical-align: top;
 }
 
-#footer {
+footer {
 	background-color: #675c47;
 	color: #efe5d0;
 	text-align: center;
@@ -77,7 +77,7 @@ div#tableRow {
 	display: table-row;
 }
 
-#headerSlogan {
+header.top img#headerSlogan {
 	float: right;
 }
 
@@ -95,6 +95,32 @@ div#tableRow {
 
 #coupon a,img {
 	border: none;
+}
+
+nav {
+	background-color: #efe5d0;
+	margin: 10px 10px 0px 10px;
+}
+
+nav ul {
+	margin: 0px;
+	list-style-type: none;
+	padding: 5px 0px 5px 0px;
+}
+
+nav ul li {
+	display: inline;
+	padding: 5px 10px 5px 10px;
+}
+
+nav ul li a:link, nav ul li a:visited {
+	color: #954b4b;
+	border-bottom: none;
+	font-weight: bold;
+}
+
+nav ul li.selected {
+	background-color: #c8b99c;
 }
 
 
