--- a/Trip Around USA/journal.css
+++ b/Trip Around USA/journal.css
@@ -30,3 +30,47 @@ h2{
 blockquote {
 	font-style: italic;
 }
+
+table {
+	margin-left: 20px;
+	margin-right: 20px;
+	boder: thin solid black;
+	caption-side: bottom;
+	border-collapse: collapse;
+}
+
+table table th {
+	background-color: white;
+}
+
+td, th {
+	border: thin dotted gray;
+	padding: 5px;
+}
+
+caption {
+	font-style: italic;
+	padding-top: 8px;
+}
+
+th {
+	background-color: #cc6600;
+}
+
+.cellcolor {
+	background-color: #fcba7a;
+}
+
+.center {
+	text-align: center;
+}
+
+.right {
+	text-align: right;
+}
+
+li {
+	list-style-image: url(images/backpack.gif);
+	padding-top: 5px;
+	margin-left: 20px;
+}
